--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.2",
   "description": "Type definitions for suseejs",
   "type": "module",
-  "main": "dist/index.cjs",
+  "main": "dist/commonjs/index.js",
   "module": "dist/index.js",
-  "types": "dist/index.d.cts",
+  "types": "dist/commonjs/index.d.ts",
   "exports": {
     ".": {
       "require": {
-        "types": "./dist/index.d.cts",
-        "default": "./dist/index.cjs"
+        "types": "./dist/commonjs/index.js",
+        "default": "./dist/commonjs/index.d.ts"
       },
       "import": {
         "types": "./dist/index.d.ts",
@@ -19,7 +19,9 @@
     }
   },
   "scripts": {
-    "build": "tsc"
+    "commonjs": "tsc -p tsconfig.commonjs.json",
+    "esm": "tsc -p tsconfig.esm.json",
+    "build": "npm run esm && npm run commonjs"
   },
   "repository": {
     "type": "git",
